fix error display on small resolutions, closes #464

--- a/client/src/main/resources/sass/codemirror.scss
+++ b/client/src/main/resources/sass/codemirror.scss
@@ -99,6 +99,9 @@
 
     .CodeMirror-linewidget {
       overflow: visible !important;
+      .runtime-error pre, .compilation-info pre {
+        padding-left: 1rem;
+      }
 
       .runtime-error i,
       .compilation-info.error i {
